Fix scrollbar offset bug on windows

--- a/src/View/NeighborFindingVisualizer.css
+++ b/src/View/NeighborFindingVisualizer.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(30, 30, 30);
+    overflow: hidden;
 }
 
 .visualizer-container {
